<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/pbLoading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/post_image"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline6"
            app:srcCompat="@drawable/login" />

        <TextView
            android:id="@+id/tv_slogan"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:alpha="0"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/sloganRegist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

        <!--        <com.google.android.material.textfield.TextInputLayout-->
        <!--            android:id="@+id/edt_password"-->
        <!--            style="@style/TextField.Password"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginHorizontal="16dp"-->
        <!--            android:layout_marginStart="16dp"-->
        <!--            android:layout_marginEnd="16dp"-->
        <!--            android:alpha="0"-->
        <!--            android:elevation="4dp"-->
        <!--            android:hint="@string/prompt_password"-->
        <!--            android:minHeight="48dp"-->
        <!--            android:selectAllOnFocus="true"-->
        <!--            app:layout_constraintEnd_toEndOf="@+id/edt_email"-->
        <!--            app:layout_constraintStart_toStartOf="@+id/edt_email"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/edt_email" >-->

        <!--            <com.google.android.material.textfield.TextInputEditText-->
        <!--                android:id="@+id/et_password"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:inputType="textPassword" />-->

        <!--        </com.google.android.material.textfield.TextInputLayout>-->

        <!--        <com.google.android.material.textfield.TextInputLayout-->
        <!--            android:id="@+id/edt_email"-->
        <!--            style="@style/TextField"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginHorizontal="16dp"-->
        <!--            android:layout_marginStart="16dp"-->
        <!--            android:layout_marginEnd="16dp"-->
        <!--            android:alpha="0"-->
        <!--            android:elevation="4dp"-->
        <!--            android:hint="@string/email"-->
        <!--            android:minHeight="48dp"-->
        <!--            android:selectAllOnFocus="true"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/tv_slogan">-->

        <!--            <com.google.android.material.textfield.TextInputEditText-->
        <!--                android:id="@+id/et_email"-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:inputType="textEmailAddress" />-->

        <!--        </com.google.android.material.textfield.TextInputLayout>-->

        <com.rafial.invento.ui.custom.EditTextCustom
            android:id="@+id/edt_name"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:alpha="0"
            android:autofillHints="Username"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_slogan" />


        <com.rafial.invento.ui.custom.EmailEdTCustom
            android:id="@+id/edt_email"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:alpha="0"
            android:autofillHints="@string/prompt_email"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingHorizontal="20dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_name" />

        <com.rafial.invento.ui.custom.PassEdTCustom
            android:id="@+id/edt_password"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:alpha="0"
            android:autofillHints="@string/prompt_password"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_signIn"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_email" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="320dp"
            android:layout_height="63dp"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:alpha="0"
            android:enabled="true"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="@+id/edt_password"
            app:layout_constraintStart_toStartOf="@+id/edt_password"
            app:layout_constraintTop_toBottomOf="@+id/edt_password" />

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499" />

        <TextView
            android:id="@+id/tv_already"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:alpha="0"
            android:text="@string/already_have_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_register" />

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="320dp"
            android:layout_height="63dp"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:alpha="0"
            android:enabled="true"
            android:text="@string/action_signIn"
            app:layout_constraintEnd_toEndOf="@+id/tv_already"
            app:layout_constraintStart_toStartOf="@+id/tv_already"
            app:layout_constraintTop_toBottomOf="@+id/tv_already" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="10dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="200dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
